# Digitization_to_SEGY

./: .gitignore  README.md  pyproject.toml
digitization_to_segy/: PostProcessing.py  Preparer.py  Processing.py  Reader.py  Saver.py  __init__.py
palettes/: RWB.alut  pallete.alut
tutorials/: demo.ipynb
